crates/pixi-build/src/bin/pixi-build-cmake/snapshots/pixi_build_cmake__cmake__tests__setting_host_and_build_requirements-2.snap
---
source: crates/pixi-build/src/bin/pixi-build-cmake/cmake.rs
expression: recipe.unwrap()
---
schema_version: 1
context: {}
package:
  name: test-reqs
  version: "1.0"
build:
  number: 0
  script: "[ ... script ... ]"
requirements:
  build:
    - boltons *
    - clangxx_osx-arm64
  host:
    - hatchling *
    - cmake *
    - ninja *
  run:
    - foobar ==3.2.1
