crates/pixi-build/src/bin/pixi-build-cmake/snapshots/pixi_build_cmake__cmake__tests__setting_host_and_build_requirements.snap
---
source: crates/pixi-build/src/bin/pixi-build-cmake/cmake.rs
expression: reqs
---
build:
  - boltons *
  - clangxx_osx-arm64
host:
  - hatchling *
  - cmake *
  - ninja *
run:
  - foobar ==3.2.1
